@@ -44,6 +44,7 @@ data_files = [('share/PyCF/',['data/ice.cpt',
                       'progs/glide_launch.py',
                       'progs/plotSpot.py',
                       'progs/plotProfile.py',
+		      'progs/plotProfileTS.py',
                       'progs/plot3DProfiles.py',
                       'progs/plotCFstats.py',
                       'progs/extractProfile.py',
@@ -51,6 +52,7 @@ data_files = [('share/PyCF/',['data/ice.cpt',
                       'progs/plotRSL.py',
 		      'progs/extractCFstats.py',
                       'progs/ran_topo.py',
+		      'progs/extractTS.py',
                       'progs/plotEISMINT2stats.py'])]
 
 setup (name = "PyCF",
